<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="right"
            android:onClick="onClickSetting"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_settings_white_24dp" />

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lsq_color_gray_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.qiniu.pili.droid.shortvideo.demo.view.ItemView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1px"
                android:onClick="onClickCapture"
                app:text="@string/title_record" />

            <com.qiniu.pili.droid.shortvideo.demo.view.ItemView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1px"
                android:onClick="onClickAudioCapture"
                app:text="@string/title_audio_record" />

            <com.qiniu.pili.droid.shortvideo.demo.view.ItemView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:onClick="onClickScreenRecord"
                app:text="@string/title_screen_record" />

            <com.qiniu.pili.droid.shortvideo.demo.view.ItemView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="20dp"
                android:onClick="onClickImportAndRecord"
                app:text="@string/title_import_and_edit" />

            <com.qiniu.pili.droid.shortvideo.demo.view.ItemView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:onClick="onClickMixRecord"
                app:text="制作视频合拍" />

            <com.qiniu.pili.droid.shortvideo.demo.view.ItemView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:onClick="onClickVideoMix"
                app:text="制作视频拼图" />

            <com.qiniu.pili.droid.shortvideo.demo.view.ItemView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:onClick="onClickImageCompose"
                app:text="@string/title_image_compose" />

            <com.qiniu.pili.droid.shortvideo.demo.view.ItemView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:onClick="onClickImageCompose2"
                app:text="图片拼接（预览+转场）" />

            <com.qiniu.pili.droid.shortvideo.demo.view.ItemView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="20dp"
                android:onClick="onClickMakeGIF"
                app:text="@string/title_gif" />

            <com.qiniu.pili.droid.shortvideo.demo.view.ItemView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:onClick="onClickDraftBox"
                app:text="@string/title_from_draft_box" />

            <com.qiniu.pili.droid.shortvideo.demo.view.ItemView
                android:id="@+id/item_version_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                app:text="版本信息" />

            <com.qiniu.pili.droid.shortvideo.demo.view.ItemView
                android:id="@+id/item_compile_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                app:text="编译时间" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>